.debug/cargo_check_antigravity_chat.txt
cargo :     Checking nl_llm_new v0.1.0 (C:
\Users\Public\nas_home\AI\GameEditor\Neuro
Loom\crates\nl_llm_new)
At line:1 char:1
+ cargo check --example antigravity_chat -
p nl_llm_new 2>&1 | Out-File  ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecifie 
   d: (    Checking nl...tes\nl_llm_new)  
  :String) [], RemoteException
    + FullyQualifiedErrorId : NativeComma 
   ndError
 
error[E0252]: the name `AntigravityOAuth` 
is defined multiple times
  --> crates\nl_llm_new\examples\antigravi
ty\chat\main.rs:17:5
   |
15 | use nl_llm_new::auth::providers::anti
gravity::AntigravityOAuth;
   |     ---------------------------------
------------------------- previous import 
of the type `AntigravityOAuth` here
16 |
17 | use nl_llm_new::auth::providers::anti
gravity::AntigravityOAuth;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^ `AntigravityOAut
h` reimported here
   |
   = note: `AntigravityOAuth` must be defi
ned only once in the type namespace of thi
s module

warning: unused import: `nl_llm_new::auth:
:providers::antigravity::AntigravityOAuth`
  --> crates\nl_llm_new\examples\antigravi
ty\chat\main.rs:17:5
   |
17 | use nl_llm_new::auth::providers::anti
gravity::AntigravityOAuth;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part
 of `#[warn(unused)]`) on by default

For more information about this error, try
 `rustc --explain E0252`.
warning: `nl_llm_new` (example "antigravit
y_chat") generated 1 warning
error: could not compile `nl_llm_new` (exa
mple "antigravity_chat") due to 1 previous
 error; 1 warning emitted
